--- a/package.json
+++ b/package.json
@@ -8,20 +8,31 @@
     "preview": "vite preview",
     "lint": "eslint ./src --ext .js,.ts,.tsx",
     "lint:fix": "eslint ./src --ext .js,.ts,.tsx --fix",
-    "lint:strict": "eslint ./src --ext .js,.ts,.tsx --fix --max-warnings=0"
+    "lint:strict": "eslint ./src --ext .js,.ts,.tsx --fix --max-warnings=0",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
     "@iconify/react": "^3.2.1",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-interactions": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/builder-vite": "^0.1.29",
+    "@storybook/react": "^6.4.22",
+    "@storybook/testing-library": "^0.0.9",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.4",
+    "babel-loader": "^8.2.4",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
