--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
-    "vite": "^2.9.2"
+    "vite": "^2.9.2",
+    "vite-plugin-pwa": "^0.11.13"
   }
 }
